--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="AI-Powered Resume Analyzer"/>
-  <title>Home | AI Powered Resume Analyzer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web App Installation | AI Powered Resume Analyzer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,78 +22,18 @@
   </header>
 
   <main>
-    <section id="abstract">
-      <h2>Abstract</h2>
+    <section>
+      <h2>Installation Guide</h2>
+      <p>To run this AI-powered resume analyzer web app locally:</p>
+      <ol>
+        <li>Clone the GitHub repository: <code>git clone https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer</code></li>
+        <li>Ensure Python 3.x and required packages are installed (check requirements.txt)</li>
+        <li>Run the backend server: <code>python app.py</code></li>
+        <li>Open <code>index.html</code> in your browser to use the frontend</li>
+      </ol>
       <p>
-        This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
+        Make sure to update paths to model files and datasets as needed, and configure your local web server if using one like XAMPP.
       </p>
-      <p>
-        Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores. It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
-      </p>
-    </section>
-
-    <section id="method">
-      <h2>Method Overview</h2>
-      <p>
-        The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings. It includes modules for skill extraction, job title prediction, and candidate ranking.
-      </p>
-    </section>
-
-    <section id="features">
-      <h2>Key Features</h2>
-      <ul>
-        <li>Resume Parsing into structured JSON</li>
-        <li>Job Description Matching</li>
-        <li>Job Title Prediction using ML</li>
-        <li>Semantic Skill Extraction</li>
-        <li>Candidate Ranking and Score Visualization</li>
-      </ul>
-    </section>
-
-    <section id="info-extracted">
-      <h2>Information Extracted</h2>
-      <ul>
-        <li>Job Title</li>
-        <li>Candidate Highlights</li>
-        <li>Direct Skill Matches</li>
-        <li>Related Skills</li>
-        <li>Experience Alignment</li>
-        <li>Keyword Frequency Score</li>
-        <li>Overall Matching Score</li>
-      </ul>
-    </section>
-
-    <section id="visuals">
-      <h2>Visualizations</h2>
-      <h3>Match Score Visualization</h3>
-      <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/visualscore.png" alt="Match Score Visualization">
-      <h3>Resume Highlights</h3>
-      <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/resumeparse.png" alt="Resume Parsing Demo">
-    </section>
-
-    <section id="resources">
-      <h2>Resources</h2>
-      <ul>
-        <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
-        <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
-        <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank">Google Colab Notebook</a></li>
-      </ul>
-    </section>
-
-    <section id="demo">
-      <h2>Video Demonstration</h2>
-      <p>Watch the system in action in this brief demonstration:</p>
-      <iframe src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
-    </section>
-
-    <section id="citation">
-      <h2>Citation</h2>
-      <pre><code>@misc{gano2025resumeanalyzer,
-  title={AI-Powered Resume Analyzer},
-  author={Gano},
-  year={2025},
-  note={\url{https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer}},
-}</code></pre>
     </section>
   </main>
 
