--- a/index.html
+++ b/index.html
@@ -1,46 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web App Installation | AI Powered Resume Analyzer</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="AI-Powered Resume Analyzer"/>
+  <title>University of Juba - Resume Analyzer</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #e6f0ff;
+      color: #00264d;
+    }
+    header, section {
+      padding: 40px 80px;
+    }
+    header {
+      background: linear-gradient(to right, #004080, #0073e6);
+      color: #fff;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.8em;
+    }
+    h2.subtitle {
+      font-size: 1.5em;
+      margin-top: 10px;
+      font-weight: 300;
+      color: #e0e0e0;
+    }
+    nav a {
+      color: #b3e0ff;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    section {
+      background-color: #ffffff;
+      margin: 20px auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 51, 102, 0.1);
+      max-width: 1000px;
+    }
+    h2 {
+      color: #003366;
+    }
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      margin: 20px auto;
+    }
+    .logo-img {
+      max-width: 150px;
+      margin-bottom: 10px;
+    }
+    pre {
+      background: #d9e6f2;
+      padding: 15px;
+      overflow-x: auto;
+      border-left: 5px solid #0073e6;
+    }
+    iframe {
+      width: 100%;
+      height: 480px;
+      border: none;
+      border-radius: 12px;
+      margin-top: 20px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    ul li {
+      margin-bottom: 8px;
+    }
+    .github-badge {
+      display: inline-block;
+      padding: 3px 8px;
+      font-size: 12px;
+      background-color: #333;
+      color: #fff;
+      border-radius: 3px;
+      margin-left: 6px;
+      font-weight: normal;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>AI Powered Resume Analyzer</h1>
+    <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
+    <h1>University of Juba</h1>
+    <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="what-we-developed.html">What We Developed</a> |
-      <a href="completeproject.html">Complete Project</a> |
-      <a href="mission.html">Project Mission</a> |
-      <a href="vision.html">Project Vision</a> |
-      <a href="goals.html">Goals</a> |
-      <a href="install.html">Web App Installation</a> |
-      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub</a>
+      <a href="#abstract">Abstract</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub<span class="github-badge">New</span></a> |
+      <a href="#visuals">Visualizations</a>
     </nav>
   </header>
 
-  <main>
-    <section>
-      <h2>Installation Guide</h2>
-      <p>To run this AI-powered resume analyzer web app locally:</p>
-      <ol>
-        <li>Clone the GitHub repository: <code>git clone https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer</code></li>
-        <li>Ensure Python 3.x and required packages are installed (check requirements.txt)</li>
-        <li>Run the backend server: <code>python app.py</code></li>
-        <li>Open <code>index.html</code> in your browser to use the frontend</li>
-      </ol>
-      <p>
-        Make sure to update paths to model files and datasets as needed, and configure your local web server if using one like XAMPP.
-      </p>
-    </section>
-  </main>
+  <section id="abstract">
+    <h2>Abstract</h2>
+    <p>
+      This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
+    </p>
+    <p>
+      Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores. It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
+    </p>
+  </section>
 
-  <footer>
-    <p>Developed By Students from University of Juba</p>
-    <p>Contact: <a href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
-    <p>&copy; 2025 University of Juba. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+  <section id="method">
+    <h2>Method Overview</h2>
+    <p>
+      The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
+      It includes modules for skill extraction, job title prediction, and candidate
