--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
       margin-right: auto;
       color: #d9f0ff;
     }
-    nav {
-      margin-top: 15px;
-    }
     nav a {
       color: #b3e0ff;
       margin: 0 10px;
@@ -104,12 +101,6 @@
       margin-left: 6px;
       font-weight: normal;
     }
-    .page-section {
-      padding: 30px 60px;
-    }
-    .alt-background {
-      background-color: #f4f9ff;
-    }
   </style>
 </head>
 <body>
@@ -123,80 +114,100 @@
     </p>
     <nav>
       <a href="#abstract">Abstract</a> |
-      <a href="#features">Features</a> |
-      <a href="#vision">Vision</a> |
-      <a href="#mission">Mission</a> |
-      <a href="#goals">Goals</a> |
-      <a href="#completeproject">Complete Project</a> |
       <a href="#developed">What We Developed</a> |
-      <a href="#installation">Installation</a>
+      <a href="#complete">Complete Project</a> |
+      <a href="#mission">Mission</a> |
+      <a href="#vision">Vision</a> |
+      <a href="#goals">Goals</a> |
+      <a href="#install">Installation</a> |
+      <a href="#visuals">Visualizations</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub<span class="github-badge">New</span></a>
     </nav>
   </header>
 
   <section id="abstract">
     <h2>Abstract</h2>
-    <p>
-      This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. 
-      Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
-    </p>
+    <p>...</p>
+  </section>
+
+  <section id="developed">
+    <h2>What We Developed</h2>
+    <p>...</p>
+  </section>
+
+  <section id="complete">
+    <h2>Complete Project</h2>
+    <p>...</p>
+  </section>
+
+  <section id="mission">
+    <h2>Project Mission</h2>
+    <p>...</p>
+  </section>
+
+  <section id="vision">
+    <h2>Project Vision</h2>
+    <p>...</p>
+  </section>
+
+  <section id="goals">
+    <h2>Goals</h2>
+    <ul>
+      <li>...</li>
+    </ul>
+  </section>
+
+  <section id="install">
+    <h2>Web App Installation</h2>
+    <p>...</p>
+  </section>
+
+  <section id="method">
+    <h2>Method Overview</h2>
+    <p>...</p>
   </section>
 
   <section id="features">
     <h2>Key Features</h2>
     <ul>
-      <li>Resume Parsing into structured JSON</li>
-      <li>Job Description Matching</li>
-      <li>Job Title Prediction using ML</li>
-      <li>Semantic Skill Extraction</li>
-      <li>Candidate Ranking and Score Visualization</li>
+      <li>...</li>
     </ul>
   </section>
 
-  <section id="vision" class="alt-background page-section">
-    <h2>Project Vision</h2>
-    <p>To revolutionize the recruitment process by introducing intelligent, automated resume analysis tools that bridge the gap between candidate potential and job requirements using advanced AI techniques.</p>
-  </section>
-
-  <section id="mission" class="page-section">
-    <h2>Project Mission</h2>
-    <p>Our mission is to create an accessible, scalable, and intelligent platform that empowers recruiters to make faster, fairer, and data-driven hiring decisions while enhancing candidate experience.</p>
-  </section>
-
-  <section id="goals" class="alt-background page-section">
-    <h2>Project Goals</h2>
+  <section id="content">
+    <h2>Information Extracted</h2>
     <ul>
-      <li>Develop an end-to-end resume parsing and matching pipeline</li>
-      <li>Integrate deep learning for job title and skill prediction</li>
-      <li>Enhance fairness and transparency in candidate evaluation</li>
-      <li>Deploy a user-friendly web interface for real-world use</li>
+      <li>...</li>
     </ul>
   </section>
 
-  <section id="completeproject" class="page-section">
-    <h2>Complete Project Details</h2>
-    <p>The complete project includes backend APIs built with Flask, resume parsing models using spaCy and transformers, job title classification using deep learning, and a responsive front-end hosted online. We also provide data, code, demo videos, and reports in the resources section.</p>
+  <section id="visuals">
+    <h2>Visualizations</h2>
+    <h3>Match Score Visualization</h3>
+    <p>...</p>
+    <img class="half-size" src="..." alt="Match Score Visualization">
+
+    <h3>Resume Parsing Output</h3>
+    <p>...</p>
+    <img class="half-size" src="..." alt="Resume Parsing Demo">
   </section>
 
-  <section id="developed" class="alt-background page-section">
-    <h2>What We Developed</h2>
+  <section id="resources">
+    <h2>Resources</h2>
     <ul>
-      <li>Custom NLP-based resume parser</li>
-      <li>Machine learning pipeline for job prediction</li>
-      <li>Interactive dashboard for visualizing candidate-job matching</li>
-      <li>Web interface for resume upload and evaluation</li>
-      <li>Google Colab demo with downloadable source code</li>
+      <li>...</li>
     </ul>
   </section>
 
-  <section id="installation" class="page-section">
-    <h2>Web App Installation Process</h2>
-    <ol>
-      <li>Clone the repository from GitHub.</li>
-      <li>Install dependencies: <code>pip install -r requirements.txt</code></li>
-      <li>Run the backend: <code>python app.py</code></li>
-      <li>Launch the frontend from <code>index.html</code></li>
-      <li>Upload resume to test the analyzer.</li>
-    </ol>
+  <section id="demo">
+    <h2>Video Demonstration</h2>
+    <p>...</p>
+    <iframe class="square" src="..." allow="autoplay"></iframe>
+  </section>
+
+  <section id="citation">
+    <h2>Citation</h2>
+    <pre><code>...</code></pre>
   </section>
 
   <footer style="text-align: center; padding: 20px; background-color: #004080; color: #fff;">
