--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     nav a:hover {
       text-decoration: underline;
     }
+    nav a.active {
+      color: #fff;
+      background: #0073e6;
+      border-radius: 4px;
+      padding: 2px 8px;
+    }
     section {
       background-color: #ffffff;
       margin: 20px auto;
