--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       text-align: center;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
+    header .subtitle {
+      color: #fff !important;
+    }
     nav a {
       color: #b3e0ff;
       margin: 0 10px;
@@ -95,7 +98,7 @@
   <header>
     <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
     <h1>University of Juba</h1>
-    <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
+    <h2 class="subtitle" style="color: #fff;">School of Computer Science and Information Technology (IT)</h2>
     <h3 class="subtitle">AI Powered Resume Analyzer</h3>
     <p class="project-desc">
       An AI-based system that extracts structured information from resumes and predicts the best-fit job category and specialization using deep learning.
@@ -107,10 +110,7 @@
       <a href="mission.html">Mission</a> |
       <a href="vision.html">Vision</a> |
       <a href="goals.html">Goals</a> |
-      <a href="install.html">Installation</a> |
-      <a href="#abstract">Abstract</a> |
-      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub<span class="github-badge">New</span></a> |
-      <a href="#visuals">Visualizations</a>
+      <a href="install.html">Installation</a>
     </nav>
   </header>
 
