--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 40px 80px;
     }
     header {
-      background: linear-gradient(to right, #004080, #0073e6); /* Home gradient */
+      background: linear-gradient(to right, #004080, #0073e6);
       color: #fff;
       text-align: center;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -196,10 +196,29 @@
 }</code></pre>
   </section>
 
-  <footer style="text-align: center; padding: 20px; background-color: #004080; color: #fff;">
-    <p>Developed By Students from University of Juba</p>
-    <p>Contact: <a href="mailto:ganomanut@gmail.com" style="color: #b3e0ff;">ganomanut@gmail.com</a></p>
-    <p>&copy; 2025 University of Juba. All rights reserved.</p>
+  <!-- CONTACT FOOTER -->
+  <footer style="background-color: #004080; color: #fff; padding: 30px 80px; text-align: left;">
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px;">
+      <div>
+        <h3 style="margin-top: 0;">Contact Us</h3>
+        <p>Email: <a href="mailto:airesume@uoj.edu.ss" style="color: #b3e0ff;">airesume@uoj.edu.ss</a></p>
+        <p>Phone: +211 922 000 123</p>
+        <p>Address: University of Juba, School of CS & IT, Juba, South Sudan</p>
+      </div>
+      <div>
+        <h3 style="margin-top: 0;">Quick Links</h3>
+        <p><a href="index.html" style="color: #b3e0ff;">Home</a></p>
+        <p><a href="install.html" style="color: #b3e0ff;">Installation Guide</a></p>
+        <p><a href="complete.html" style="color: #b3e0ff;">Full Project</a></p>
+      </div>
+      <div>
+        <h3 style="margin-top: 0;">Follow Us</h3>
+        <p><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank" style="color: #b3e0ff;">GitHub</a></p>
+        <p><a href="https://www.linkedin.com/" target="_blank" style="color: #b3e0ff;">LinkedIn</a></p>
+      </div>
+    </div>
+    <hr style="margin: 20px 0; border-color: #0073e6;">
+    <p style="text-align: center;">&copy; 2025 University of Juba. Developed by Final Year CS & IT Students.</p>
   </footer>
 </body>
 </html>
