--- a/index.html
+++ b/index.html
@@ -201,8 +201,11 @@
     <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px;">
       <div>
         <h3 style="margin-top: 0;">Contact Us</h3>
-        <p>Email: <a href="mailto:airesume@uoj.edu.ss" style="color: #b3e0ff;">airesume@uoj.edu.ss</a></p>
-        <p>Phone: +211 922 000 123</p>
+        <p>Email: <a href="jamesdutmathok@gmail.com" style="color: #b3e0ff;">jamesdutmathok@gmail.com</a></p>
+        <p>Phone: +211 924519185</p>
+       <p>Email: <a href="agarmarial2018@gmail.com" style="color: #b3e0ff;">agarmarial2018@gmail.com</a></p>
+        <p>Phone: +211 922782228</p>
+        
         <p>Address: University of Juba, School of CS & IT, Juba, South Sudan</p>
       </div>
       <div>
@@ -218,7 +221,7 @@
       </div>
     </div>
     <hr style="margin: 20px 0; border-color: #0073e6;">
-    <p style="text-align: center;">&copy; 2025 University of Juba. Developed by Final Year CS & IT Students.</p>
+    <p style="text-align: center;">&copy; 2025 University of Juba. Developed by Fourth Year CS & IT Students.</p>
   </footer>
 </body>
 </html>
