--- a/index.html
+++ b/index.html
@@ -12,78 +12,120 @@
       padding: 0;
       background-color: #e6f0ff;
       color: #00264d;
-      font-size: 15px;
+      font-size: 14px;
     }
+
     header, section {
       padding: 20px 40px;
     }
+
     header {
       background: linear-gradient(to right, #004080, #0073e6);
       color: #fff;
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 0 0 16px 16px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
     }
+
+    header .subtitle {
+      color: #fff !important;
+      font-size: 14px;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
     nav a {
       color: #b3e0ff;
       margin: 0 6px;
       text-decoration: none;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 13px;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
+
     nav a.active {
       color: #fff;
       background: #0073e6;
-      border-radius: 4px;
+      border-radius: 6px;
       padding: 2px 6px;
     }
+
     section {
       background-color: #ffffff;
-      margin: 15px auto;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 51, 102, 0.05);
+      margin: 16px auto;
+      border-radius: 16px;
+      box-shadow: 0 2px 10px rgba(0, 51, 102, 0.1);
       max-width: 900px;
     }
-    h2 {
-      color: #003366;
-      font-size: 20px;
+
+    h1, h2, h3 {
+      margin-top: 8px;
+      margin-bottom: 10px;
     }
+
+    h2 {
+      font-size: 18px;
+      color: #003366;
+    }
+
+    h3 {
+      font-size: 16px;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
     img {
       display: block;
-      max-width: 90%;
       height: auto;
-      border-radius: 8px;
-      margin: 15px auto;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+      margin: 16px auto;
+      max-width: 90%;
     }
+
     .logo-img {
       max-width: 80px;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
     }
+
     .half-size {
-      max-width: 45%;
+      max-width: 50%;
     }
+
     pre {
       background: #d9e6f2;
       padding: 10px;
       overflow-x: auto;
-      font-size: 13px;
       border-left: 4px solid #0073e6;
+      font-size: 12px;
+      border-radius: 8px;
     }
+
     iframe.square {
       width: 300px;
       height: 300px;
       border: none;
-      border-radius: 8px;
-      margin: 15px auto;
+      border-radius: 12px;
+      margin: 20px auto;
       display: block;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
+
+    ul {
+      padding-left: 20px;
+    }
+
     ul li {
       margin-bottom: 6px;
     }
+
     .github-badge {
       display: inline-block;
       padding: 2px 6px;
@@ -91,29 +133,39 @@
       background-color: #333;
       color: #fff;
       border-radius: 3px;
-      margin-left: 4px;
+      margin-left: 6px;
+      font-weight: normal;
     }
+
     footer {
       background-color: #004080;
       color: #fff;
       padding: 20px 40px;
+      text-align: left;
+      border-radius: 16px 16px 0 0;
+      font-size: 13px;
+    }
+
+    footer h3 {
+      margin-top: 0;
       font-size: 14px;
     }
-    footer h3 {
-      font-size: 16px;
-    }
+
     footer p, footer a {
       font-size: 13px;
     }
+
     footer a {
       color: #b3e0ff;
       text-decoration: none;
     }
+
     footer a:hover {
       text-decoration: underline;
     }
+
     hr {
-      margin: 15px 0;
+      margin: 20px 0;
       border-color: #0073e6;
     }
   </style>
@@ -121,10 +173,12 @@
 <body>
   <header>
     <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
-    <h1 style="font-size: 24px;">University of Juba</h1>
-    <h2 class="subtitle" style="color: #fff; font-size: 18px;">School of Computer Science and IT</h2>
-    <h3 class="subtitle" style="font-size: 16px;">AI Powered Resume Analyzer</h3>
-    <p style="max-width: 700px; margin: auto;">An AI-based system that extracts structured information from resumes and predicts the best-fit job category and specialization using deep learning.</p>
+    <h1>University of Juba</h1>
+    <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
+    <h3 class="subtitle">AI Powered Resume Analyzer</h3>
+    <p class="project-desc">
+      An AI-based system that extracts structured information from resumes and predicts the best-fit job category and specialization using deep learning.
+    </p>
     <nav>
       <a href="index.html">Home</a> |
       <a href="developed.html">What We Developed</a> |
@@ -136,10 +190,87 @@
     </nav>
   </header>
 
-  <!-- Keep your original content here -->
-  <!-- Just updated styles will make it look more compact and clean -->
+  <section id="abstract">
+    <h2>Abstract</h2>
+    <p>
+      This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. 
+      Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
 
-  <!-- Reinsert your existing sections like abstract, method, features, etc. -->
+      Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. 
+      Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores.
+      It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
+    </p>
+  </section>
+
+  <section id="method">
+    <h2>Method Overview</h2>
+    <p>
+      The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
+      It includes modules for skill extraction, job title prediction, and candidate ranking.
+    </p>
+    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/Overview.png" alt="Method Overview">
+  </section>
+
+  <section id="features">
+    <h2>Key Features</h2>
+    <ul>
+      <li>Resume Parsing into structured JSON</li>
+      <li>Job Description Matching</li>
+      <li>Job Title Prediction using ML</li>
+      <li>Semantic Skill Extraction</li>
+      <li>Candidate Ranking and Score Visualization</li>
+    </ul>
+  </section>
+
+  <section id="content">
+    <h2>Information Extracted</h2>
+    <ul>
+      <li>Job Title</li>
+      <li>Candidate Highlights</li>
+      <li>Direct Skill Matches</li>
+      <li>Related Skills</li>
+      <li>Experience Alignment</li>
+      <li>Keyword Frequency Score</li>
+      <li>Overall Matching Score</li>
+    </ul>
+  </section>
+
+  <section id="visuals">
+    <h2>Visualizations</h2>
+
+    <h3>Match Score Visualization</h3>
+    <p>This chart illustrates the AI's assessment of how well a resume aligns with a specific job description. The scores are calculated based on direct skill matches, job title relevance, experience similarity, and other NLP-derived metrics.</p>
+    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/visualscore.png" alt="Match Score Visualization">
+
+    <h3>Resume Parsing Output</h3>
+    <p>This parsed view shows how the system extracts structured information such as job titles, skills, education, and work experience from a raw resume file. This structured data is then used to perform intelligent matching with job listings.</p>
+    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/resumeparse.png" alt="Resume Parsing Demo">
+  </section>
+
+  <section id="resources">
+    <h2>Resources</h2>
+    <ul>
+      <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
+      <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
+      <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank">Google Colab Notebook</a></li>
+    </ul>
+  </section>
+
+  <section id="demo">
+    <h2>Video Demonstration</h2>
+    <p>Watch how the AI system parses a resume and predicts the candidate’s job specialization based on extracted skills, titles, and experiences. The prediction output is dynamically generated after resume upload.</p>
+    <iframe class="square" src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
+  </section>
+
+  <section id="citation">
+    <h2>Citation</h2>
+    <pre><code>@misc{gano2025resumeanalyzer,
+  title={AI-Powered Resume Analyzer},
+  author={Gano},
+  year={2025},
+  note={\url{https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer}},
+}</code></pre>
+  </section>
 
   <footer>
     <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px;">
@@ -163,7 +294,7 @@
         <p><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></p>
       </div>
     </div>
-    <hr />
+    <hr>
     <p style="text-align: center;">&copy; 2025 University of Juba. Developed by Fourth Year CS & IT Students.</p>
   </footer>
 </body>
