--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       padding: 0;
       background-color: #e6f0ff;
       color: #00264d;
-      font-size: 16px;
+      font-size: 14px;
     }
 
-    header, section {
+    header, section, footer {
       padding: 20px 40px;
     }
 
@@ -23,24 +23,35 @@
       background: linear-gradient(to right, #004080, #0073e6);
       color: #fff;
       text-align: center;
-      border-radius: 0 0 8px 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+      border-radius: 0 0 16px 16px;
     }
 
     header .subtitle {
-      color: #fff !important;
       font-size: 16px;
+      margin: 4px 0;
     }
 
-    nav {
-      margin-top: 10px;
+    h1 {
+      font-size: 22px;
+      margin: 10px 0;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
+
+    h3 {
+      font-size: 16px;
+      margin-bottom: 6px;
     }
 
     nav a {
       color: #b3e0ff;
       margin: 0 6px;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
       font-size: 13px;
     }
 
@@ -57,42 +68,24 @@
 
     section {
       background-color: #ffffff;
-      margin: 12px auto;
-      border-radius: 16px;
-      box-shadow: 0 2px 10px rgba(0, 51, 102, 0.1);
-      max-width: 900px;
-    }
-
-    h1, h2, h3 {
-      margin-top: 8px;
-      margin-bottom: 10px;
-    }
-
-    h2 {
-      font-size: 18px;
-      color: #003366;
-    }
-
-    h3 {
-      font-size: 16px;
-    }
-
-    p {
-      line-height: 1.5;
+      margin: 16px auto;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0, 51, 102, 0.1);
+      max-width: 1000px;
     }
 
     img {
       display: block;
       height: auto;
       border-radius: 12px;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.12);
       margin: 16px auto;
-      max-width: 90%;
+      max-width: 100%;
     }
 
     .logo-img {
       max-width: 80px;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
 
     .half-size {
@@ -103,9 +96,9 @@
       background: #d9e6f2;
       padding: 10px;
       overflow-x: auto;
-      border-left: 4px solid #0073e6;
-      font-size: 12px;
+      border-left: 5px solid #0073e6;
       border-radius: 8px;
+      font-size: 12px;
     }
 
     iframe.square {
@@ -113,13 +106,13 @@
       height: 300px;
       border: none;
       border-radius: 12px;
-      margin: 20px auto;
+      margin: 16px auto;
       display: block;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
     ul {
-      padding-left: 20px;
+      padding-left: 18px;
     }
 
     ul li {
@@ -128,13 +121,12 @@
 
     .github-badge {
       display: inline-block;
-      padding: 2px 6px;
+      padding: 3px 6px;
       font-size: 11px;
       background-color: #333;
       color: #fff;
       border-radius: 3px;
       margin-left: 6px;
-      font-weight: normal;
     }
 
     footer {
@@ -143,30 +135,43 @@
       padding: 20px 40px;
       text-align: left;
       border-radius: 16px 16px 0 0;
-      font-size: 13px;
-    }
-
-    footer h3 {
-      margin-top: 0;
-      font-size: 14px;
-    }
-
-    footer p, footer a {
-      font-size: 13px;
     }
 
     footer a {
       color: #b3e0ff;
       text-decoration: none;
+      font-size: 13px;
     }
 
     footer a:hover {
       text-decoration: underline;
     }
 
-    hr {
-      margin: 20px 0;
+    footer hr {
+      margin: 16px 0;
       border-color: #0073e6;
+    }
+
+    footer h3 {
+      font-size: 16px;
+      margin-top: 0;
+    }
+
+    footer p {
+      margin: 4px 0;
+      font-size: 13px;
+    }
+
+    @media (max-width: 600px) {
+      header, section, footer {
+        padding: 12px 20px;
+      }
+
+      iframe.square {
+        width: 90%;
+        height: auto;
+        aspect-ratio: 1 / 1;
+      }
     }
   </style>
 </head>
@@ -174,13 +179,13 @@
   <header>
     <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
     <h1>University of Juba</h1>
-    <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
+    <h2 class="subtitle">School of Computer Science and IT</h2>
     <h3 class="subtitle">AI Powered Resume Analyzer</h3>
     <p class="project-desc">
-      An AI-based system that extracts structured information from resumes and predicts the best-fit job category and specialization using deep learning.
+      An AI-based system that extracts structured information from resumes and predicts job category and specialization using deep learning.
     </p>
     <nav>
-      <a href="index.html">Home</a> |
+      <a href="index.html" class="active">Home</a> |
       <a href="developed.html">What We Developed</a> |
       <a href="complete.html">Complete Project</a> |
       <a href="mission.html">Mission</a> |
@@ -190,79 +195,72 @@
     </nav>
   </header>
 
-  <section id="abstract">
+  <section>
     <h2>Abstract</h2>
     <p>
-      This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. 
-      Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
-
-      Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. 
-      Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores.
-      It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
+      This AI-powered resume analyzer parses resumes, extracts structured information, and evaluates job-fit based on NLP techniques and deep learning.
+      It computes similarity scores between resumes and job descriptions, using semantic and statistical metrics, to enhance recruitment processes.
     </p>
   </section>
 
-  <section id="method">
+  <section>
     <h2>Method Overview</h2>
     <p>
-      The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
-      It includes modules for skill extraction, job title prediction, and candidate ranking.
+      The system parses unstructured resumes, predicts job titles, extracts skills, and ranks candidates using deep learning.
     </p>
     <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/Overview.png" alt="Method Overview">
   </section>
 
-  <section id="features">
+  <section>
     <h2>Key Features</h2>
     <ul>
-      <li>Resume Parsing into structured JSON</li>
+      <li>Resume Parsing</li>
       <li>Job Description Matching</li>
-      <li>Job Title Prediction using ML</li>
+      <li>Title Prediction using ML</li>
       <li>Semantic Skill Extraction</li>
-      <li>Candidate Ranking and Score Visualization</li>
+      <li>Candidate Ranking & Score Visualization</li>
     </ul>
   </section>
 
-  <section id="content">
+  <section>
     <h2>Information Extracted</h2>
     <ul>
       <li>Job Title</li>
       <li>Candidate Highlights</li>
-      <li>Direct Skill Matches</li>
-      <li>Related Skills</li>
-      <li>Experience Alignment</li>
-      <li>Keyword Frequency Score</li>
-      <li>Overall Matching Score</li>
+      <li>Direct/Related Skills</li>
+      <li>Experience Match</li>
+      <li>Keyword Score</li>
+      <li>Overall Match Score</li>
     </ul>
   </section>
 
-  <section id="visuals">
+  <section>
     <h2>Visualizations</h2>
-
     <h3>Match Score Visualization</h3>
-    <p>This chart illustrates the AI's assessment of how well a resume aligns with a specific job description. The scores are calculated based on direct skill matches, job title relevance, experience similarity, and other NLP-derived metrics.</p>
+    <p>This chart shows how well a resume aligns with job roles using multiple metrics.</p>
     <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/visualscore.png" alt="Match Score Visualization">
 
     <h3>Resume Parsing Output</h3>
-    <p>This parsed view shows how the system extracts structured information such as job titles, skills, education, and work experience from a raw resume file. This structured data is then used to perform intelligent matching with job listings.</p>
+    <p>The parsed resume shows extracted job titles, skills, and experiences used for AI matching.</p>
     <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/resumeparse.png" alt="Resume Parsing Demo">
   </section>
 
-  <section id="resources">
+  <section>
     <h2>Resources</h2>
     <ul>
-      <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
+      <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l" target="_blank">Google Drive</a></li>
       <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
-      <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank">Google Colab Notebook</a></li>
+      <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view" target="_blank">Google Colab Notebook</a></li>
     </ul>
   </section>
 
-  <section id="demo">
+  <section>
     <h2>Video Demonstration</h2>
-    <p>Watch how the AI system parses a resume and predicts the candidate’s job specialization based on extracted skills, titles, and experiences. The prediction output is dynamically generated after resume upload.</p>
+    <p>Watch how the AI system parses and analyzes resumes in real time.</p>
     <iframe class="square" src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
   </section>
 
-  <section id="citation">
+  <section>
     <h2>Citation</h2>
     <pre><code>@misc{gano2025resumeanalyzer,
   title={AI-Powered Resume Analyzer},
@@ -280,7 +278,7 @@
         <p>Phone: +211 924519185</p>
         <p>Email: <a href="mailto:agarmarial2018@gmail.com">agarmarial2018@gmail.com</a></p>
         <p>Phone: +211 922782228</p>
-        <p>Address: University of Juba, School of CS & IT, Juba, South Sudan</p>
+        <p>University of Juba, School of CS & IT</p>
       </div>
       <div>
         <h3>Quick Links</h3>
@@ -294,8 +292,8 @@
         <p><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></p>
       </div>
     </div>
-    <hr>
-    <p style="text-align: center;">&copy; 2025 University of Juba. Developed by Fourth Year CS & IT Students.</p>
+    <hr />
+    <p style="text-align: center;">&copy; 2025 University of Juba. Developed by Final Year CS & IT Students.</p>
   </footer>
 </body>
 </html>
