--- a/index.html
+++ b/index.html
@@ -10,167 +10,181 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #e6f0ff;
+      background-color: #f0f6ff;
       color: #00264d;
-      font-size: 14px;
-    }
-
-    header, section, footer {
-      padding: 20px 40px;
+      font-size: 16px;
+      line-height: 1.6;
     }
 
     header {
       background: linear-gradient(to right, #004080, #0073e6);
-      color: #fff;
+      color: white;
       text-align: center;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
-      border-radius: 0 0 16px 16px;
+      padding: 30px 20px;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
     }
 
-    header .subtitle {
-      font-size: 16px;
+    header img.logo-img {
+      max-width: 100px;
+      margin-bottom: 10px;
+    }
+
+    header h1 {
+      font-size: 28px;
+      margin: 0;
+    }
+
+    header h2, header h3 {
+      font-weight: normal;
       margin: 4px 0;
-    }
-
-    h1 {
-      font-size: 22px;
-      margin: 10px 0;
-    }
-
-    h2 {
       font-size: 18px;
-      margin-bottom: 8px;
     }
 
-    h3 {
-      font-size: 16px;
-      margin-bottom: 6px;
+    .project-desc {
+      margin-top: 10px;
+      font-size: 15px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    nav {
+      margin-top: 15px;
     }
 
     nav a {
-      color: #b3e0ff;
-      margin: 0 6px;
+      color: #cce6ff;
       text-decoration: none;
+      margin: 0 10px;
       font-weight: 600;
-      font-size: 13px;
+      font-size: 14px;
+      padding: 6px 10px;
+      border-radius: 5px;
     }
 
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    nav a.active {
-      color: #fff;
+    nav a.active, nav a:hover {
       background: #0073e6;
-      border-radius: 6px;
-      padding: 2px 6px;
+      color: white;
     }
 
     section {
-      background-color: #ffffff;
-      margin: 16px auto;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0, 51, 102, 0.1);
+      background: white;
+      margin: 30px auto;
+      padding: 25px 30px;
       max-width: 1000px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 64, 128, 0.08);
+    }
+
+    section h2 {
+      color: #004080;
+      font-size: 22px;
+      margin-bottom: 15px;
     }
 
     img {
       display: block;
+      max-width: 100%;
       height: auto;
+      margin: 20px auto;
       border-radius: 12px;
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.12);
-      margin: 16px auto;
-      max-width: 100%;
-    }
-
-    .logo-img {
-      max-width: 80px;
-      margin-bottom: 8px;
     }
 
     .half-size {
       max-width: 50%;
     }
 
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
     pre {
-      background: #d9e6f2;
-      padding: 10px;
-      overflow-x: auto;
+      background: #eef6ff;
+      padding: 12px;
+      font-size: 13px;
       border-left: 5px solid #0073e6;
       border-radius: 8px;
-      font-size: 12px;
+      overflow-x: auto;
     }
 
     iframe.square {
-      width: 300px;
+      width: 100%;
+      max-width: 500px;
       height: 300px;
       border: none;
       border-radius: 12px;
-      margin: 16px auto;
       display: block;
+      margin: 20px auto;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    ul {
-      padding-left: 18px;
-    }
-
-    ul li {
-      margin-bottom: 6px;
-    }
-
-    .github-badge {
-      display: inline-block;
-      padding: 3px 6px;
-      font-size: 11px;
-      background-color: #333;
-      color: #fff;
-      border-radius: 3px;
-      margin-left: 6px;
     }
 
     footer {
       background-color: #004080;
-      color: #fff;
-      padding: 20px 40px;
-      text-align: left;
+      color: white;
+      padding: 30px 40px;
       border-radius: 16px 16px 0 0;
     }
 
     footer a {
       color: #b3e0ff;
       text-decoration: none;
-      font-size: 13px;
+      font-size: 14px;
     }
 
     footer a:hover {
       text-decoration: underline;
     }
 
-    footer hr {
-      margin: 16px 0;
-      border-color: #0073e6;
-    }
-
     footer h3 {
-      font-size: 16px;
       margin-top: 0;
+      font-size: 16px;
     }
 
     footer p {
-      margin: 4px 0;
       font-size: 13px;
+      margin: 5px 0;
+    }
+
+    footer hr {
+      border-color: #0073e6;
+      margin: 20px 0;
+    }
+
+    .footer-flex {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 20px;
     }
 
     @media (max-width: 600px) {
-      header, section, footer {
-        padding: 12px 20px;
+      header, footer, section {
+        padding: 15px;
+      }
+
+      nav a {
+        display: inline-block;
+        margin: 6px 4px;
+      }
+
+      .half-size {
+        max-width: 100%;
       }
 
       iframe.square {
-        width: 90%;
+        width: 100%;
         height: auto;
         aspect-ratio: 1 / 1;
+      }
+
+      .footer-flex {
+        flex-direction: column;
       }
     }
   </style>
@@ -179,35 +193,30 @@
   <header>
     <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
     <h1>University of Juba</h1>
-    <h2 class="subtitle">School of Computer Science and IT</h2>
-    <h3 class="subtitle">AI Powered Resume Analyzer</h3>
+    <h2>School of Computer Science and IT</h2>
+    <h3>AI Powered Resume Analyzer</h3>
     <p class="project-desc">
       An AI-based system that extracts structured information from resumes and predicts job category and specialization using deep learning.
     </p>
     <nav>
-      <a href="index.html" class="active">Home</a> |
-      <a href="developed.html">What We Developed</a> |
-      <a href="complete.html">Complete Project</a> |
-      <a href="mission.html">Mission</a> |
-      <a href="vision.html">Vision</a> |
-      <a href="goals.html">Goals</a> |
+      <a href="index.html" class="active">Home</a>
+      <a href="developed.html">What We Developed</a>
+      <a href="complete.html">Complete Project</a>
+      <a href="mission.html">Mission</a>
+      <a href="vision.html">Vision</a>
+      <a href="goals.html">Goals</a>
       <a href="install.html">Installation</a>
     </nav>
   </header>
 
   <section>
     <h2>Abstract</h2>
-    <p>
-      This AI-powered resume analyzer parses resumes, extracts structured information, and evaluates job-fit based on NLP techniques and deep learning.
-      It computes similarity scores between resumes and job descriptions, using semantic and statistical metrics, to enhance recruitment processes.
-    </p>
+    <p>This AI-powered resume analyzer parses resumes, extracts structured information, and evaluates job-fit using NLP techniques and deep learning.</p>
   </section>
 
   <section>
     <h2>Method Overview</h2>
-    <p>
-      The system parses unstructured resumes, predicts job titles, extracts skills, and ranks candidates using deep learning.
-    </p>
+    <p>The system parses resumes, predicts job titles, extracts skills, and ranks candidates using AI.</p>
     <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/Overview.png" alt="Method Overview">
   </section>
 
@@ -237,12 +246,9 @@
   <section>
     <h2>Visualizations</h2>
     <h3>Match Score Visualization</h3>
-    <p>This chart shows how well a resume aligns with job roles using multiple metrics.</p>
-    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/visualscore.png" alt="Match Score Visualization">
-
+    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/visualscore.png" alt="Match Score Chart">
     <h3>Resume Parsing Output</h3>
-    <p>The parsed resume shows extracted job titles, skills, and experiences used for AI matching.</p>
-    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/resumeparse.png" alt="Resume Parsing Demo">
+    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/resumeparse.png" alt="Parsed Resume">
   </section>
 
   <section>
@@ -256,7 +262,6 @@
 
   <section>
     <h2>Video Demonstration</h2>
-    <p>Watch how the AI system parses and analyzes resumes in real time.</p>
     <iframe class="square" src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
   </section>
 
@@ -271,7 +276,7 @@
   </section>
 
   <footer>
-    <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px;">
+    <div class="footer-flex">
       <div>
         <h3>Contact Us</h3>
         <p>Email: <a href="mailto:jamesdutmathok@gmail.com">jamesdutmathok@gmail.com</a></p>
